welcome.lessons.welcome.loopfor.LoopStairs.scala.code
droite();
baisseBrosse();
setCouleurBrosse(c:lightGray);
for ( i<-1 to 4){
	avance();
}
